<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.2.0</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>br.com.juliocauan</groupId>
	<artifactId>authentication</artifactId>
	<version>1.2.0</version>
	<name>authentication</name>
	<description>Token Authentication API</description>
	<properties>
		<java.version>17</java.version>
		<jjwt.version>0.12.3</jjwt.version>
		<jackson.version>0.2.6</jackson.version>
		<snakeyaml.version>2.2</snakeyaml.version>
		<greenmail.version>2.0.1</greenmail.version>
		<jacoco.version>0.8.11</jacoco.version>
		<openapi.version>7.1.0</openapi.version>
	</properties>
	<dependencies>
		<!-- SPRING BOOT -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-mail</artifactId>
		</dependency>
		<!-- !SPRING BOOT -->

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt</artifactId>
			<version>${jjwt.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openapitools</groupId>
			<artifactId>jackson-databind-nullable</artifactId>
			<version>${jackson.version}</version>
		</dependency>
		<dependency>
			<groupId>org.yaml</groupId>
			<artifactId>snakeyaml</artifactId>
			<version>${snakeyaml.version}</version>
		  </dependency>
		  <dependency>
			  <groupId>com.icegreen</groupId>
			  <artifactId>greenmail</artifactId>
			  <version>${greenmail.version}</version>
		  </dependency>
		  <dependency>
			  <groupId>com.icegreen</groupId>
			  <artifactId>greenmail-junit5</artifactId>
			  <version>${greenmail.version}</version>
		  </dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco.version}</version>
				<configuration>
					<excludes>
						<exclude>org/openapitools/**</exclude>
						<exclude>br/com/juliocauan/authentication/AuthenticationApplication.class</exclude>
					</excludes>
				 </configuration>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!--OPENAPI GENERATOR MAVEN-->
			<plugin>
				<groupId>org.openapitools</groupId>
				<artifactId>openapi-generator-maven-plugin</artifactId>
				<version>${openapi.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>
							<inputSpec>${project.basedir}/authentication-docs/authentication.yml</inputSpec>
							<generatorName>spring</generatorName>
							<library>spring-boot</library>
							<configOptions>
								<dateLibrary>java8</dateLibrary>
								<delegatePattern>true</delegatePattern>
								<disallowAdditionalPropertiesIfNotPresent>false</disallowAdditionalPropertiesIfNotPresent>
								<documentationProvider>none</documentationProvider>
								<interfaceOnly>true</interfaceOnly>
								<openApiNullable>true</openApiNullable>
								<prependFormOrBodyParameters>true</prependFormOrBodyParameters>
								<skipDefaultInterface>true</skipDefaultInterface>
								<generateSupportingFiles>false</generateSupportingFiles>
								<unhandledException>false</unhandledException>
								<useSpringBoot3>true</useSpringBoot3>
								<useTags>true</useTags>
							</configOptions>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<!--OPENAPI GENERATOR MAVEN-->
		</plugins>
	</build>

</project>
